Use socklen_t for the length of socket address.

* src/assuan-defs.h (_assuan_sock_connect): Use socklen_t.
(_assuan_sock_bind, _assuan_sock_get_nonce): Likewise.
* src/assuan-socket.c (_assuan_sock_connect): Likewise.
(_assuan_sock_bind, _assuan_sock_get_nonce, assuan_sock_connect)
(assuan_sock_bind, assuan_sock_get_nonce): Likewise.
* src/assuan.h.in (assuan_sock_connect, assuan_sock_bind)
(assuan_sock_get_nonce): Likewise.

--

GnuPG-bug-id: 5924
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>